--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.20.1",
+    "express": "^4.16.4",
+    "uniqid": "^5.4.0"
   }
 }
